k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cb-ingress-api
  namespace: cb-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: compliance-buddy.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cb-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cb-ingress-docs
  namespace: cb-system
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: compliance-buddy.local
      http:
        paths:
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: cb-api
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: cb-api
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: cb-api
                port:
                  number: 8080
          - path: /sonar
            pathType: Prefix
            backend:
              service:
                name: cb-sonarqube
                port:
                  number: 9000
